# backend/app/Http/Controllers/E5N/EventController.php
@@ -9,29 +9,16 @@ use App\Http\Controllers\{
 
 use App\Models\{
     Event,
-    Rating,
-    User,
     Slot,
 };
 
-use App\Http\Resources\{
-    EventResource,
-    RatingResource,
-    UserResource,
-    UserResourceCollection,
-    EventResourceCollection,
-};
+use App\Helpers\SlotType;
 
-use App\Exception;
-use App\Exceptions\DuplicateCodeException;
-use Carbon\Carbon;
-use DateTime;
-use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Illuminate\Http\Request;
 
 use Illuminate\Support\Facades\{
-    Auth,
     Cache,
+    DB,
 };
 
 
@@ -57,6 +44,7 @@ class EventController extends Controller
     {
         $event = Event::create($request->all());
         Cache::forget('e5n.events.all');
+        Cache::forget('e5n.events.presentations');
         return Cache::rememberForever('e5n.events'.$event->id, fn () => $event);
     }
 
@@ -78,7 +66,8 @@ class EventController extends Controller
     {
         Event::findOrFail($eventId)->update($request->all());
         Cache::forget('e5n.events.all');
-        Cache::put('e5n.events'.$eventId, Event::findOrFail($eventId));
+        Cache::forget('e5n.events.presentations');
+        Cache::forever('e5n.events'.$eventId, Event::findOrFail($eventId));
         return Cache::get('e5n.events'.$eventId);
     }
 
@@ -87,10 +76,12 @@ class EventController extends Controller
      *
      * @return \Illuminate\Http\Response
      */
-    public function delete($eventId){
+    public function delete($eventId)
+    {
         $event = Event::findOrFail($eventId);
         $event->delete();
         Cache::forget('e5n.events.all');
+        Cache::forget('e5n.events.presentations');
         return Cache::pull('e5n.events'.$event->id, fn () => $event);
     }
 
@@ -99,11 +90,43 @@ class EventController extends Controller
      *
      * @return \Illuminate\Http\Response
      */
-    public function restore($eventId){
+    public function restore($eventId)
+    {
         $event = Event::withTrashed()->findOrFail($eventId);
         $event->restore();
         Cache::forget('e5n.events.all');
+        Cache::forget('e5n.events.presentations');
+        Cache::forever('e5n.events'.$event->id, $event);
+        return Cache::get('e5n.events'.$event->id);
+    }
+
+    /**
+     * close signup of event
+     * @return \Illuminate\Http\Response
+     */
+    public function close_signup($eventId)
+    {
+        $event = Event::findOrFail($eventId);
+        $event->signup_deadline = now()->format('Y-m-d H:i:s');
+        $event->save();
+        Cache::forget('e5n.events.all');
+        Cache::forget('e5n.events.presentations');
         Cache::put('e5n.events'.$event->id, $event);
         return Cache::get('e5n.events'.$event->id);
+    }
+
+    /**
+     * return all presentations
+     * @return \Illuminate\Http\Response
+     */
+    public function presentations()
+    {
+        return Cache::rememberForever(
+            'e5n.events.presentations',
+            fn () => DB::table('events')
+                ->join('slots', 'events.slot_id', '=', 'slots.id')
+                ->where('slots.slot_type', SlotType::presentation)
+                ->get()
+        );
     }
 }
